Bug 106671 - Dell Chromebook 11 (2015 model), no backlight
Summary: Dell Chromebook 11 (2015 model), no backlight
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: intel-gfx-bugs@lists.freedesktop.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-27 00:45 UTC by Keith Webb
Modified: 2015-11-02 08:22 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.2.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch for Dell Chromebook 11 (2015 model) backlight (426 bytes, patch)
2015-10-27 00:45 UTC, Keith Webb
Details | Diff

Description Keith Webb 2015-10-27 00:45:36 UTC
Created attachment 191201 [details]
Patch for Dell Chromebook 11 (2015 model) backlight

This is similar to bug #93451. With the stock kernel, there are no files in /sys/class/backlight and attempts to adjust the backlight do not work. Based on the the troubleshooting in bug #93451 and the output of 'lspci -vmmnn -s 0:02', I compiled a patched kernel in which the backlight works and files appear in /sys/class/backlight. The patch is attached and the output of 'lspci -vmmnn -s 0:02' is pasted below:


Slot:	00:02.0
Class:	VGA compatible controller [0300]
Vendor:	Intel Corporation [8086]
Device:	Haswell-ULT Integrated Graphics Controller [0a16]
SVendor:	Dell [1028]
SDevice:	Device [0a35]
Rev:	0b
Comment 1 Jani Nikula 2015-10-27 08:40:19 UTC
Please send the patch to intel-gfx@lists.freedesktop.org with proper Signed-off-by: (the significane is http://developercertificate.org/) and commit message.
Comment 2 Jani Nikula 2015-10-30 13:08:29 UTC
So I ended up sending the patch http://patchwork.freedesktop.org/patch/msgid/1446209424-28801-1-git-send-email-jani.nikula@intel.com

Please indicate whether that's okay, and works.
Comment 3 Jani Nikula 2015-11-02 08:22:35 UTC
commit 9be64eee3a87dc03218ca9a12834d1150a57b8a8
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri Oct 30 14:50:24 2015 +0200

    drm/i915: add quirk to enable backlight on Dell Chromebook 11 (2015)

Note You need to log in before you can comment on or make changes to this bug.